--- a/_config.yml
+++ b/_config.yml
@@ -302,7 +302,7 @@ jekyll-archives:
     tag: "/blog/tag/:name/"
     category: "/blog/category/:name/"
 
-display_tags: ["academics", "math", "code"] # these tags will be displayed on the front page of your blog
+display_tags: ["travel", "academics", "math", "code"] # these tags will be displayed on the front page of your blog
 display_categories: [] # these categories will be displayed on the front page of your blog
 
 # -----------------------------------------------------------------------------
