--- a/_config.yml
+++ b/_config.yml
@@ -110,7 +110,7 @@ youtube_id: # your youtube channel id (youtube.com/@<youtube_id>)
 zotero_username: # your zotero username
 
 contact_note: >
-  Please feel free to reach me using these methods..
+  Please feel free to reach me using these methods.
 
 # -----------------------------------------------------------------------------
 # Analytics and search engine verification
